# codegraph

./: .gitignore  .mcp.json  CONTRIBUTING.md  DEBUGGING_EDGES.md  DOCKER_COMMANDS.md  EXPLORE_GRAPH.md  FRONTEND_COMPLETE.md  GRAPH_CONNECTIVITY_EXPLAINED.md  NODE_LABEL_UPDATE.md  README.md  SYSTEM_STATUS.md  TEST_COVERAGE_PLAN.md  TYPE_VISUALIZATION.md  VARIABLE_TYPE_FIX.md  architecture.d2  check_param.py  check_types.py  check_var_annotations.py  docker-compose.yml  graph_full.json  reindex.json  test_api.sh  test_frontend_data.html  test_mcp_tools.py  test_workflow.py  theroy and idea.txt  visualizer.html  workflow.d2
backend/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run.py  schema.md  setup.py
backend/app/: __init__.py  config.py  database.py  main.py  models.py
backend/app/routers/: __init__.py  analysis.py  commits.py  files.py  functions.py  graph.py  index.py  snapshots.py  validation.py  watch.py  websocket.py
backend/app/services/: __init__.py  realtime.py
backend/codegraph/: __init__.py  builder.py  cli.py  db.py  git_snapshot.py  mcp_server.py  parser.py  query.py  snapshot.py  validators.py  watcher.py  workflow.py
backend/examples/: connected_example.py  example_code.py  example_violations.py  minimal_reference.py  stress_test.py  test_codegraph.py  validation_workflow_example.py
backend/migrations/: migrate_to_v2_schema.cypher
backend/tests/: README.md  __init__.py  conftest.py  test_schema_v2.py
backend/tests/unit/core/: test_builder.py  test_db.py  test_parser.py  (+2 more)
(+77 files in other folders)
